# bci

./: README.md  pyproject.toml  requirements.txt  zipzap_db_test.py  zipzap_test.py
src/zipzap/: main.py
src/zipzap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zipzap_sandbox/: Dockerfile  app.py  docs.html  index.html  requirements.txt
zipzap_sandbox/static/: styles.css
zipzap_sandbox/templates/: docs.html
